--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ header nav ul li a:hover {
 
 /* Header Background Area */
 .headerbg {
-    background: url('gramott_header.jpg') no-repeat center center/cover;
+    background: url('banner.png') no-repeat center center/cover;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -89,7 +89,7 @@ header nav ul li a:hover {
 .hero {
     position: relative;
     height: 100vh;
-    background: url('../assets/img/gramott_header.jpg') no-repeat center center/cover;
+    background: url('../assets/img/banner.png') no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
