--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ header nav ul li a:hover {
 .hero {
     position: relative;
     height: 100vh;
-    background: url('../assets/img/banner.png') no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -98,6 +97,7 @@ header nav ul li a:hover {
     overflow: hidden;
     margin-bottom: 2em;
     border-radius: 0.5em;
+    background: url('../assets/img/banner.png') no-repeat center center/cover;
 }
 
 .hero-overlay {
@@ -106,14 +106,14 @@ header nav ul li a:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.4); /* Dark overlay for readability */
+    background: rgba(0, 12, 44, 0.4);
     z-index: 1;
 }
 
 .hero .container {
     position: relative;
     z-index: 2;
-    text-align: left; /* Justify text to the left */
+    text-align: left;
 }
 
 .hero h1 {
@@ -124,16 +124,18 @@ header nav ul li a:hover {
 }
 
 .hero p {
-    font-size: 1.5em;
-    margin-bottom: 1.5em;
+    font-size: 1.6em;
+    margin-bottom: 2em;
     animation: fadeInUp 1s ease;
 }
 
 .btn-find-plan {
-    background: #4CAF50;
+    background: #ff2407;
     color: #fff;
+    font-size: 1.5em;
     padding: 1em 2em;
     border-radius: 50px;
+    font-weight: 800;
     text-decoration: none;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: background 0.3s, transform 0.3s;
@@ -141,7 +143,7 @@ header nav ul li a:hover {
 }
 
 .btn-find-plan:hover {
-    background: #45a049;
+    background: #4553a0;
     transform: translateY(-3px);
 }
 
@@ -226,7 +228,7 @@ header nav ul li a:hover {
 }
 
 .calculator button {
-    background: #4CAF50;
+    background: #0090e4;
     color: #fff;
     padding: 0.75em 1.5em;
     border: none;
